# Order-Matching-Engine

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  order-matching-engine-spec.md  progress_report.md
.cache/clangd/index/: auth.hpp.615C576DAE07E26E.idx  backpressure_test.cpp.4276DB11B00B064D.idx  blocking_producer.hpp.69914AC811EC7AD6.idx  cache.hpp.4139B9D6C3C456C8.idx  cache_test.cpp.C2C311E6B12C669C.idx  codec_test.cpp.FA1F6CF76960CEBF.idx  command.hpp.6F6DF7B6B099DCC4.idx  crc32.hpp.8526FB96F2ED978F.idx  decoder.cpp.093E126C3A13D6E5.idx  decoder.hpp.AEE3F19994B7DDD2.idx  e2e_test.cpp.E337BDA61FB99913.idx  encoder.cpp.EF25512874E20F58.idx  encoder.hpp.A4B948576429C963.idx  fragmentation_test.cpp.134B2C7162DEAD00.idx  fuzz_test.cpp.BD54B6E3FAF36CE3.idx  gateway.hpp.8C98356FA7333D5F.idx  gateway_test_harness.hpp.DB4A77B8DC60800C.idx  hostile_test.cpp.D7B84D34C61E0F7F.idx  invariants.hpp.84C4ECA7A667DBF9.idx  journal_format.hpp.CCF03A84251D1F91.idx  journal_reader.hpp.16E5A4B833C1025F.idx  journal_writer.hpp.50DC1CA59EA4FAB1.idx  level_map.hpp.089115D8EF404EA5.idx  level_map_test.cpp.55F83A22E7F380C0.idx  matching_thread.hpp.BCDCDC7540BDFB82.idx  matching_thread_test.cpp.24369133AE3522D1.idx  message_types.hpp.AE2284E39E43873C.idx  messages.hpp.A09D94D00C136345.idx  multicast_ring.hpp.793385BDBE87DD07.idx  no_exceptions_tu.cpp.1BDFA9F9AB56B34E.idx  object_pool.hpp.74F619BC4CAB4340.idx  object_pool_test.cpp.23E98626A43CBB19.idx  order.hpp.07C6982743C78333.idx  order_book.cpp.03727C9718831609.idx  order_book.hpp.D8B7CABFC0788F6A.idx  order_book_test.cpp.74211A06AAF1E28C.idx  order_id_map.hpp.309AA31FF237B12A.idx  order_id_map_test.cpp.B120517F75F2852F.idx  outbound_event.hpp.B1B192AA0155AB05.idx  platform.hpp.9167C4BB57D14B6D.idx  (+32 more)
.claude/: settings.json
.claude/agents/: benchmark-runner.md  correctness-verifier.md  latency-reviewer.md  spec-author.md
.claude/commands/: alloc-check.md  bench.md  invariants.md  perf-baseline.md  profile.md  progress.md  recover-test.md  replay.md  spec.md
.claude/scripts/: format-and-lint.sh  guard-bash.sh  hot-path-lint.sh  inject-context.sh
.claude/skills/benchmark-methodology/: SKILL.md
.claude/skills/low-latency-cpp/: SKILL.md
.claude/skills/matching-semantics/: SKILL.md
.claude/skills/order-book-internals/: SKILL.md
.specify/memory/: constitution.md
apps/: CMakeLists.txt  velox_client.cpp  velox_gateway.cpp  velox_live.cpp
benchmark/: CMakeLists.txt  velox_alloc_check.cpp  velox_bench.cpp  velox_ring_bench.cpp
benchmarks/baselines/: hardware.md  summary.json
book/: level_map.hpp  order_id_map.hpp
common/: cache.hpp  crc32.hpp  object_pool.hpp  scenario.hpp  types.hpp
engine/: order.hpp  order_book.cpp  order_book.hpp  price_level.hpp  trade.hpp
gateway/: auth.hpp  gateway.hpp  session.cpp  session.hpp
ipc/: blocking_producer.hpp  command.hpp  multicast_ring.hpp  outbound_event.hpp  spsc_ring.hpp
planning/: 01-project-summary.md  01-requirements.md  02-architecture.md  03-system-design.md  04-database-design.md  04-database-schema.sql  05-api-design.md  05-openapi.yaml
platform/: platform.hpp
protocol/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  message_types.hpp  messages.hpp  wire.hpp
recovery/: recovery_manager.hpp  state_digest.hpp
runtime/: matching_thread.hpp
sequencer/: journal_format.hpp  journal_reader.hpp  journal_writer.hpp  sequencer.hpp  snapshot_format.hpp  snapshot_reader.hpp  snapshot_thread.hpp  snapshot_writer.hpp
specs/: README.md
specs/000-constitution/: spec.md
specs/001-core-order-book/: plan.md  spec.md  tasks.md
specs/002-order-lifecycle/: plan.md  spec.md
specs/003-invariants-property-tests/: spec.md
specs/004-zero-alloc-hot-path/: plan.md  spec.md
specs/005-spsc-ring-ingress/: spec.md
specs/006-sequencer-journal-recovery/: spec.md
specs/007-gateway-wire-protocol/: spec.md
specs/008-market-data-publisher/: spec.md
specs/009-benchmark-harness/: spec.md
specs/010-live-visualizer/: spec.md
specs/011-multi-instrument/: spec.md
specs/012-postgres-audit-tier/: spec.md
specs/013-rest-admin-api/: spec.md
tests/: CMakeLists.txt
tests/gateway/: backpressure_test.cpp  codec_test.cpp  e2e_test.cpp  fragmentation_test.cpp  fuzz_test.cpp  gateway_test_harness.hpp  hostile_test.cpp  routing_test.cpp  session_test.cpp
tests/invariant/: invariants.hpp  property_test.cpp  schedule.hpp  shrink.hpp
tests/recovery/: recover_sigkill_test.cpp  recovery_test.cpp
tests/replay/: replay_test.cpp
tests/replay/golden/: cancel.golden  cancel_after_fill.golden  cancel_replace.golden  cancel_replace_resets_priority.golden  crossing_book.golden  empty_book.golden  fifo_same_price.golden  fok.golden  fok_almost_fills.golden  full_fill.golden  ioc.golden  limit_match.golden  market_exhausts_book.golden  market_into_empty_book.golden  partial_fill.golden  price_improvement.golden  replace_into_cross.golden  self_trade_prevention.golden  stp_multi_level.golden
tests/replay/scenarios/: cancel.txt  cancel_after_fill.txt  cancel_replace.txt  cancel_replace_resets_priority.txt  crossing_book.txt  empty_book.txt  fifo_same_price.txt  fok.txt  fok_almost_fills.txt  full_fill.txt  ioc.txt  limit_match.txt  market_exhausts_book.txt  market_into_empty_book.txt  market_order.txt  partial_fill.txt  price_improvement.txt  replace_into_cross.txt  self_trade_prevention.txt  stp_multi_level.txt
tests/structural/: hot_path_grep_test.py  no_exceptions_tu.cpp
tests/unit/: cache_test.cpp  level_map_test.cpp  matching_thread_test.cpp  object_pool_test.cpp  order_book_test.cpp  order_id_map_test.cpp  price_level_test.cpp  spsc_ring_test.cpp  spsc_ring_tsan_test.cpp
